# LightWise

./: .gitignore  .gitmodules  CONTRIBUTING.md  README.md
.github/: dependabot.yml
.github/workflows/: firmware-ci.yml  web-ci.yml
apps/web/: package-lock.json  package.json
apps/web/src/: App.css  App.js  README.txt  index.js
apps/web/src/components/: ActivityFeed.jsx  AdminWsControls.jsx  BubbleCard.jsx  Card.jsx  Layout.js  Legend.js  MapEmbed.js  Panel.jsx  PillRow.jsx  PoleManager.jsx  Sidebar.js  StatCard.js  TopBar.js
apps/web/src/pages/: Admin.js  Login.js  Map_View.js  Overview.js
apps/web/src/services/: api.js  useLightWiseWS.js
apps/web/src/styles/: admin.css  lightwise.css
docs/: GIT_WORKFLOW.md  api-contract-v0.1.md  database-schema.md  system-architecture.md
docs/lorawan/: uplink-payload-v1.md
docs/sprint/: sprint2-plan.md
firmware/: .clang-format  .clang-tidy  .gitignore  STYLE.md  platformio.ini  sdkconfig.esp32-s3-devkitc-1  sdkconfig.esp32-s3-devkitm-1
firmware/docs/: firmware-architecture.md  hw-spec.md
firmware/partitions/: default_8MB.csv
firmware/scripts/: build.sh  run-tests.sh
firmware/src/: main.cpp
firmware/src/board/: board.c  board.h
firmware/src/common/utils/: num_fmt.c  num_fmt.h  str_ext.c  str_ext.h
firmware/src/hal/: alspt19.c  alspt19.h  dht11.c  dht11.h  lwnode.c  lwnode.h
firmware/src/lib/: alspt19.c  alspt19.h  dht11.c  dht11.h  lwnode.c  lwnode.h
firmware/test/: CMakeLists.txt
firmware/test/common/utils/: test_num_fmt.cpp  test_str_ext.cpp
firmware/test/lib/: test_alspt19.cpp  test_dht11.cpp
firmware/test/mocks/hal/: alspt19.h  dht11.h
